# Projects

./: README.md  index.html
Comprehensive Stock Search/Android Frontend/main/: AndroidManifest.xml
Comprehensive Stock Search/Android Frontend/main/assets/: mspr_chart.html  test_chart.html  trend_chart.html
Comprehensive Stock Search/Backend/: app.yaml  package-lock.json  package.json  server.js
Comprehensive Stock Search/Frontend/: app.yaml  package-lock.json  package.json
Comprehensive Stock Search/Frontend/public/: index.html  styles.css
Comprehensive Stock Search/Frontend/src/: App.css  App.js
Go Agent/: my_player4.py
Room Reservation/: CMakeLists.txt  Makefile  client.cpp  client.h  member.txt  readme.txt  serverC.cpp  serverC.h  serverEEB.cpp  serverEEB.h  serverM.cpp  serverRTH.cpp  serverRTH.h
Weenix OS/weenix/: Config.mk  commands.gdb  inittmp.gdb  procs-README.txt  vfs-README.txt  vm-README.txt  weenix
Weenix OS/weenix/kernel/api/: access.c  binfmt.c  elf32.c  exec.c  syscall.c
Weenix OS/weenix/kernel/boot/: gdt.h  paging.h
Weenix OS/weenix/kernel/drivers/: blockdev.c  bytedev.c  memdevs.c  pci.c
Weenix OS/weenix/kernel/entry/: entry.c
Weenix OS/weenix/kernel/fs/: faber_fs_test.c  file.c  namev.c  open.c  pipe.c  vfs.c  vfs_syscall.c  vn_mmobj_ops.c  vn_special.c  vnode.c
Weenix OS/weenix/kernel/include/: config.h  ctype.h  globals.h  kernel.h  multiboot.h  stdarg.h
Weenix OS/weenix/kernel/main/: acpi.c  apic.c  gdt.c  interrupt.c  kmain.c  kmain_aux.c  main.gdbcomm  pit.c
Weenix OS/weenix/kernel/mm/: mm.gdbcomm  page.c  pframe.c  (+3 more)
(+182 files in other folders)
